[package]
name = "ctfile-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "fs", "rt"] }
tracing = "0.1"
reqwest = "0.11"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }