[package]
name = "ctfile-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rand = "0.8.5"

tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt"] }
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }