[package]
name = "ctfile-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
rand = "0.8.5"
futures-core = "0.3.28"
futures-util = "0.3.28"

tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt"] }
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.21", features = ["derive"] }
